deploying-simple-echo-app-using-blue-green-deployment/echo-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=echo-v1"
          ports:
            - name: http
              protocol: TCP
              containerPort: 5678
