deploying-simple-echo-app-using-blue-green-deployment/echo-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v2
  template:
    metadata:
      labels:
        app: echo
        version: v2
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=echo-v2"
          ports:
            - name: http
              protocol: TCP
              containerPort: 5678
